@@ -22,6 +22,8 @@ http://couchdb-python.googlecode.com/svn/tags/0.6.0
    a HTTP COPY request (issue 74).
  * Accessing a non-existing database through `Server.__getitem__` now throws
    a `ResourceNotFound` exception as advertised (issue 41).
+ * Added a `delete()` method to the `client.Server` class for consistency
+   (issue 64).
 
 
 Version 0.5
